k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress
spec:
    backend:
        serviceName: nginx-svc
        servicePort: 80
